--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ᴀʀɴᴀᴠ ᴄʜᴀᴛʙᴏᴛ",    
+    "name": "sexychatbot",    
     "env": {
         "BOT_TOKEN": {
             "description": "telegram bot token here",
